# control-systems-research-template

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  conftest.py  environment.yml  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: control-verifier.md
.claude/commands/: new-claim.md  new-experiment.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
config/: params.yaml
docs/: README.md  research_notes.md
docs/agents/: coding_rules.md  design.md  personality.md  progress.md
docs/experiments/: README.md  _experiment_template.md  exp_01_free_simulation.md  exp_02_state_space_lqr.md  exp_03_mpc_cvxpy.md  exp_04_symbolic_pendulum.md
docs/literature/: README.md  reading_notes_template.md
docs/methodology/: methodology_template.md
docs/paper/: README.md  build.ps1  build.sh  outline.md  paper.tex
experiments/: run_01_free_simulation.py  run_02_state_space_lqr.py  run_03_mpc_cvxpy.py  run_04_symbolic_pendulum.py  template_experiment.py
knowledge/: README.md
knowledge/claims/: _template.md
lib/: __init__.py
lib/controllers/: __init__.py  build.py  computed_torque.py  factory.py  lqr.py  mpc.py  pid.py  pole_placement.py  state_feedback.py
lib/dynamics/: __init__.py  forward_dynamics.py  kinematics.py  linearize.py  robot_model.py  robot_plant.py
lib/integrators/: __init__.py  runge_kutta.py
lib/sim/: __init__.py  simulate.py
lib/systems/: __init__.py  build.py  discretize.py  examples.py  linearize.py  plant.py  state_space.py
lib/utils/: __init__.py  config.py  io.py  plotting.py
models/: README.md  double_pendulum.urdf
references/: references.bib
references/pdfs/: manifest.yaml
scripts/: hash_pdf.py  new_claim.py  new_experiment.py  verify.py  verify_knowledge.py
scripts/hooks/: gate.py  knowledge_reminder.py  mark_dirty.py  mark_sources.py
tests/: test_config.py  test_controllers.py  test_integrators.py  test_io.py  test_linearize.py  test_plotting.py  test_sim.py  test_state_controllers.py  test_systems.py
