[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-control-research"
version = "0.1.0"
description = "MATLAB/Spyder-style Python template for robot-control academic research"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "control>=0.9.4",   # python-control: LQR, pole placement, state-space
    "cvxpy>=1.4",       # convex optimization: LMI/SDP, convex (linear) MPC
    "sympy>=1.12",      # symbolic state-space derivation / Jacobian cross-checks
]

# Optional runtime features.
#   dynamics : rigid-body dynamics via Pinocchio (the robot plant). Ships via conda
#              on Windows (no PyPI wheel); the `pin` wheel works elsewhere.
#   opt      : extra optimal-/robust-control tooling. casadi (nonlinear MPC,
#              autodiff) and slycot (python-control's MIMO routines: place, care,
#              hinfsyn). slycot ships wheels for Windows/macOS/Linux; conda is the
#              fallback if no wheel exists for your platform.
# Install with, e.g.:
#   pip install -e '.[dynamics,opt]'   # pip
#   uv sync --extra dynamics --extra opt
[project.optional-dependencies]
dynamics = ["pin>=2.7 ; platform_system != 'Windows'"]
opt = ["casadi>=3.6", "slycot>=0.5"]

# Dev tooling (PEP 735). uv installs this group by default with `uv sync`.
# pip users: `pip install --group dev` (pip>=25.1) or just `pip install pytest`.
[dependency-groups]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
# Discover `lib` and all its subpackages (controllers, dynamics, integrators,
# utils, sim); experiments/ and tests/ are intentionally not packaged.
include = ["lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
